  birthtime. Unfortunately unlike under FSD systems (FreeBSD, MACoS X,
  and so on), the utime/utimes/timensat call do not set birthtime, so
  you can restore birthtime of Linux's file only under BSD systems
  today.
- AES becomes the default when gnupg is used without additional
  algorithm.
- new implementation of the libcurl API use for more efficient reuse of
  established sessions.

from 2.6.13 to 2.6.14
- script used to build dar windows binary have been fixed to have the
  provided etc/darrc usable and used out of the box.
- fixed bug when met when removing slices of an old backup located on
  a remote sftp server
- fixed bug in cache layer met when writing sliced backup to a remote
ftp or sftp repository

from 2.6.12 to 2.6.13
- fixed compilation warning in testing routine (outside libdar and dar)
- due to change in autoconf, the --sysconfdir path (which defaults to
  ${prefix}/etc) was read as an empty string, leading dar to look for
  darrc system file at the root of the filesystem (/darrc)
- fixed bug that should occur in extremely rare conditions (it has been
  discover during 2.7.0 validation process): compression must be used,
  no ciphering, no hashing, file changed at backup time or had a poor
  compression ratio, was not saved at slice boundary, the previous
  entry had an EA saved but no FSA or an unchanged FSA. In such
  conditions are all met, dar tries to resave the file in place, but
  partially or totally overwites the EAs of the previous entry leading
  to archive testing to fail for these EA (though the archive could be
  finished without error).
- fixed bug met when case insensitive mask is requested (-an option)
  and locale of file to restore or backup is not the one the dar binary
  is run with.

from 2.6.11 to 2.6.12
- fixed regression met in 2.6.11 when generating encrypted archives

from 2.6.10 to 2.6.11
- fixing bug in dar_manager libdar part, met when the two oldest entries